--- a/src/html/styles.css
+++ b/src/html/styles.css
@@ -77,8 +77,8 @@ a:active {
 .main_url {
     display: flex;
     justify-content: center;
-    padding-block: 2px;
-    width: 120px;
+    padding: 2px 8px;
+    min-width: 120px;
     margin: 1em;
     line-height: 35px;
     border: 1px solid;
