--- a/src/html/styles.css
+++ b/src/html/styles.css
@@ -8,7 +8,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    margin-bottom: 0;
+    margin-block: 0;
     margin-inline: 0;
     background-color: var(--bg-color);
     color: var(--text-color);
@@ -17,7 +17,7 @@ body {
 }
 
 .main_content {
-    margin-bottom: 2em;
+    margin-block: 0.5em 2em;
 }
 
 .logo {
