--- a/src/html/styles.css
+++ b/src/html/styles.css
@@ -2,6 +2,7 @@
     --text-color: #ced4da;
     --bg-color: #343a40;
     --div-color: #212529;
+    --max-p-width: 80ch;
 }
 
 body {
@@ -30,6 +31,12 @@ div {
     padding: 1em;
     border-radius: 5px;
     background-color: var(--div-color);
+}
+
+p {
+    margin-inline: auto;
+    max-width: var(--max-p-width);
+    text-wrap: pretty;
 }
 
 input {
@@ -105,6 +112,7 @@ ul {
 
 li {
     padding-block: 0.3em;
+    max-width: var(--max-p-width);
 }
 
 .centered_list_container {
@@ -133,9 +141,11 @@ a:active {
 }
 
 .main_url_section {
+    margin-inline: auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    max-width: var(--max-p-width);
 }
 
 .main_url {
@@ -171,10 +181,11 @@ a:active {
 .popup {
     display: none;
     position: fixed;
-    top: 10%;
     z-index: 20;
-    height: 70%;
-    width: 70%;
+    top: 5%;
+    bottom: 5%;
+    width: calc(var(--max-p-width) + 10ch);
+    max-width: 80%;
     box-shadow: 0px 0px 0px 9999px rgba(0, 0, 0, 0.65);
 }
 
@@ -206,8 +217,8 @@ a:active {
 }
 
 .popup_text {
-    height: 90%;
-    padding-inline: 1em;
+    height: calc(98% - 3.5em); /* subtract approx. size of h2 (+ its margin) */
+    padding-right: 2em;
     text-align: left;
 }
 
@@ -216,7 +227,7 @@ img.explaination {
     border-radius: 2px;
     transition: transform 0.2s;
 
-    /* override in inline styling if needed */
+    /* override in inline styling if needed: */
     height: 1em;
     --image-scale: 2.5;
     --shadow-size: 0.4em;
@@ -237,6 +248,10 @@ footer {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+}
+
+.socials p {
+    margin-inline: initial;
 }
 
 .social_icons {
