--- a/src/html/styles.css
+++ b/src/html/styles.css
@@ -157,12 +157,13 @@ a:active {
     border: 1px solid;
     border-radius: 5px;
     border-color: #6c757d;
+    color: var(--text-color);
     box-sizing: border-box;
     text-align: center;
     transition: all 0.3s;
 }
 
-.main_url:any-link {
+a.main_url:any-link {
     color: var(--text-color);
 }
 
